--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "^7.4.1",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.3",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
